# AlphaBet

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
alphabet/: __init__.py  config.py  main.py
alphabet/agents/: __init__.py  base.py  chart.py  financial.py  macro.py  news.py  supervisor.py
alphabet/ml/: __init__.py  hf_client.py  sentiment.py
alphabet/orchestrator/: __init__.py  pipeline.py
alphabet/schemas/: __init__.py  common.py  market.py  weights.py
alphabet/services/: __init__.py  financial_data.py  kis_client.py  macro_data.py  market_data.py  naver_finance_news.py  news_data.py
tests/: crawl_naver_news.py  fetch_stock_quote.py
