[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alphabet"
version = "0.1.0"
description = "멀티 에이전트 주식 분석 프레임워크"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[project.scripts]
alphabet = "alphabet.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alphabet*"]
